Commit after Test 3

--- a/sol/index.html
+++ b/sol/index.html
@@ -2,11 +2,42 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Welcome to my assignment</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="css/style.css">
+    <title>Assignment Solution for Module 2</title>
+    <h1>Our Menu</h1>
 </head>
 <body>
 
-Hello World
+    <div class="col-lg-4 col-md-6 col-sm-1">
+        <div class="chicken-box">
+            Chicken
+        </div>
+    Spacing: Pay attention to the spacing shown in the mockup illustrations. Note the spacing between sections (both hor
+        izontal and vertical). Note the horizontal spacing between the edges of the section and the edges of the browser
+        window. Also, note the spacing between the dummy text in each section and the edges of the section. Lastly, make
+        sure the dummy text is "pushed down" enough so it doesn't overlap the section title region.
+    </div>
+
+    <div class="col-lg-4 col-md-6 col-sm-1">
+        <div class="beef-box">
+            Beef
+        </div>
+    Spacing: Pay attention to the spacing shown in the mockup illustrations. Note the spacing between sections (both hor
+        izontal and vertical). Note the horizontal spacing between the edges of the section and the edges of the browser
+        window. Also, note the spacing between the dummy text in each section and the edges of the section. Lastly, make
+        sure the dummy text is "pushed down" enough so it doesn't overlap the section title region.
+    </div>
+
+    <div class="col-lg-4 col-md-1 col-sm-1">
+        <div class="sushi-box">
+            Sushi
+        </div>
+    Spacing: Pay attention to the spacing shown in the mockup illustrations. Note the spacing between sections (both hor
+        izontal and vertical). Note the horizontal spacing between the edges of the section and the edges of the browser
+        window. Also, note the spacing between the dummy text in each section and the edges of the section. Lastly, make
+        sure the dummy text is "pushed down" enough so it doesn't overlap the section title region.
+    </div>
 
 </body>
 </html>
